grails-app/assets/stylesheets/feature.css
#map-modal .modal-body {
    overflow-y: hidden;
}

.btn.edit-feature {
    width: 100%;
    height: 100%;
    max-height:500px;
    max-width:500px;
    margin-bottom: 10px;
}

.mini-feature {
    min-width: 30px;
    min-height: 30px;
    width: 100%;
    height: 100%;
}
.mini-feature path {
    stroke:red;
    stroke-width:1px;
    fill: #ff000033;
}

.sites-list-sidebar {
    position:absolute;
    right:0;
    top:0;
    width: 20em;
    overflow-y: auto;
    height:100%;
}

.site-label {
    position: relative;
    min-height: 40px;
    width: 100%;
}

.site-label label {
    margin-right: 80px;
}

.accordion-group .site-label label.collapsable  {
    margin-left: 20px;
}

.accordion-group a.accordion-toggle {
    position: absolute;
    left:5px;
    top: 5px;
}

.site-label .btn-container {
    position: absolute;
    right: 0;
    top: 5px;
}

.site-label .btn-container .btn {
    margin-right: 0;
}

.sites-list-heading {
    padding : 5px;
    position: relative;
}

ul.sites-category {
    border-top: 1px solid lightgrey;
}

li.site-label {
    padding: 5px;
    border-bottom : 1px solid lightgrey;
}

li.site-label:hover {
    background: #d9edf7;
}

li.site-label button {
    opacity: 1;
    color: black;
    margin-right: 2px;
}

li.site-label i {
    opacity: initial;

}
.sites-list-heading .accordion-toggle {
    z-index: 100;
}
.sites-list-heading .site-label {
    display: inline-block;
}
.site-category-heading {
    font-weight: bold;
    font-size: larger;
}

.feature-map {
    position: relative;
}

.feature-map .map-container {
    margin-right: 21em;
}

.feature-map .site-information {
    background: #d9edf7;
    padding: 5px;
    border: 1px solid grey;
}

.feature-map .leaflet-draw-actions {
    margin-left: 1px;
}

.feature-map .leaflet-draw-actions a {
    color: white !important;
    background-color: #555;
}

#map-modal.modal .modal-dialog.modal-xl {
    width: 98%;
    max-width: 100% ;
    height: 99% ;
    max-height: 100% ;
}
#map-modal.modal .modal-content {
    height: 100% ;
    border: 0 ;
    border-radius: 0;
}

@media (min-width: 576px) {
   #map-modal .modal-dialog {
        margin: 0.5rem auto;
    }
}
.unstyled {
    list-style-type: none !important;
}

